<resources>
    <string name="app_name">Currency Converter</string>
    <string name="usd">USD to Euro</string>
    <string name="euro">Euro to USD</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="convertbutton">Convert Button</string>
    <string name="error">ERROR</string>
    <string name="dollarsign">$</string>
    <string name="eurosign">€</string>
    <string name="custom">Custom Exchange Rate (%)</string>
    <string name="blank">ERROR</string>
    <string name="xchangehint">0.00</string>
</resources>