<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="124dp"
        android:layout_height="134dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/customrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom" />

        <RadioButton
            android:id="@+id/eurotousd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/usdtoeuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usd" />
    </RadioGroup>

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="424dp"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/convertbutton"
        android:layout_width="205dp"
        android:layout_height="86dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="226dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/convertbutton"
        android:tint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="48dp"
        android:text="@string/output"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/convertbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <EditText
        android:id="@+id/custominput"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/xchangehint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>